# pacman-gtk

./: ARCHITECTURE.md  CMakeLists.txt  GAME_MODEL_AND_ALGORITHMS.md  IMPROVEMENTS-pacman.md  IOS_PORTING_GUIDE.md  README.md  TEST_CASES.md  app.txt  gamemodel.cpp  gamemodel.h  main_gtk.cpp
android/: README.md  local.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/pacman/: MainActivity.kt  PacmanGame.kt
tests/: test_gamemodel.cpp
